[gd_scene load_steps=14 format=3 uid="uid://bj87lcqs0x8lr"]

[ext_resource type="PackedScene" uid="uid://cb2roqwnqe0al" path="res://components/hitbox/hit_box.tscn" id="1_53e8i"]
[ext_resource type="Script" uid="uid://d4mrndgb84c65" path="res://components/weapons/sword/sword_old.gd" id="1_v2oyg"]
[ext_resource type="Script" uid="uid://3wtv26ldj4iu" path="res://effects/effect_res.gd" id="2_xyq31"]
[ext_resource type="Script" uid="uid://bgho0nn52h27q" path="res://effects/one_hit_damage_res.gd" id="3_v2oyg"]
[ext_resource type="PackedScene" uid="uid://c03aqukr6wrum" path="res://components/ranger_activator/range_activator.tscn" id="4_o53ic"]
[ext_resource type="Texture2D" uid="uid://c0mc1peomcbkq" path="res://emojis.png" id="5_xyq31"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v2oyg"]
radius = 84.0238

[sub_resource type="Resource" id="Resource_7wl1p"]
script = ExtResource("3_v2oyg")
damage = 3
metadata/_custom_type_script = "uid://bgho0nn52h27q"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc8qm"]
size = Vector2(10, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2oyg"]
atlas = ExtResource("5_xyq31")
region = Rect2(3456.153, 4351.86, 127.71875, 128.35059)

[sub_resource type="Animation" id="Animation_v2oyg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xyq31"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.2831855]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2oyg"]
_data = {
&"RESET": SubResource("Animation_v2oyg"),
&"attack": SubResource("Animation_xyq31")
}

[node name="Sword" type="Node2D"]
script = ExtResource("1_v2oyg")

[node name="RangeActivator" parent="." instance=ExtResource("4_o53ic")]
cooldown = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeActivator"]
shape = SubResource("CircleShape2D_v2oyg")

[node name="HitBox" parent="." instance=ExtResource("1_53e8i")]
monitoring = false
effects = Array[ExtResource("2_xyq31")]([SubResource("Resource_7wl1p")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -57)
shape = SubResource("RectangleShape2D_dc8qm")

[node name="Sprite2D" type="Sprite2D" parent="HitBox"]
position = Vector2(0, -45)
rotation = -2.3561945
scale = Vector2(0.38999996, 0.38999996)
texture = SubResource("AtlasTexture_v2oyg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v2oyg")
}

[connection signal="activate" from="RangeActivator" to="." method="_on_range_activator_activate"]
